k8s/overlays/eks-dev/patches/api-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: booking
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
